db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: guestbook-db
spec:
  selector:
    matchLabels:
      app: guestbook-db
  serviceName: guestbook-db-service
  replicas: 1
  template:
    metadata:
      labels:
        app: guestbook-db
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: guestbook-db-pvc
