frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: guestbook-frontend
  template:
    metadata:
      labels:
        app: guestbook-frontend
    spec:
      containers:
        - name: frontend-app
          image: nginx:latest
          ports:
            - containerPort: 3000 # Adjust if your frontend uses a different port
