backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-backend-service
spec:
  selector:
    app: guestbook-backend
  ports:
    - protocol: TCP
      port: 8080 # Adjust if your backend uses a different port
      targetPort: 8080 # Adjust if your backend uses a different port
