db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-db-service
spec:
  selector:
    app: guestbook-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
